catkin_w_s/logs/quadcopter_perception/build.make.006.log.stderr
/home/subho/catkin_w_s/src/quadcopter_perception/src/scripts/manual_controller.cpp: In function ‘void state_cb(const State&)’:
/home/subho/catkin_w_s/src/quadcopter_perception/src/scripts/manual_controller.cpp:21:5: error: ‘current_state_offboard’ was not declared in this scope
   21 |     current_state_offboard = msg;
      |     ^~~~~~~~~~~~~~~~~~~~~~
/home/subho/catkin_w_s/src/quadcopter_perception/src/scripts/manual_controller.cpp: In function ‘int main(int, char**)’:
/home/subho/catkin_w_s/src/quadcopter_perception/src/scripts/manual_controller.cpp:48:12: error: ‘getch’ was not declared in this scope; did you mean ‘getc’?
   48 |     switch(getch()) {
      |            ^~~~~
      |            getc
make[2]: *** [CMakeFiles/manual_controller.dir/build.make:63: CMakeFiles/manual_controller.dir/src/scripts/manual_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:292: CMakeFiles/manual_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
